<resources>
    <string name="app_name">Network Exercise</string>
    <string name="label_login">Login</string>
    <string name="message_login">Silahkan gunakan akun yang anda miliki untuk dapat melanjutkan</string>
    <string name="label_phone_number">No. Handphone</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Lupa Kata Sandi Anda?</string>
    <string name="label_log_in">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_home">Home</string>
    <string name="label_profile">Profile</string>
    <string name="label_month_process">Info Bulan Berjalan</string>
    <string name="label_start_plafond">Plafond Awal Bulan</string>
    <string name="label_price">Rp. 2.000.000</string>
    <string name="label_usage_plafond">Pemakaian Plafond</string>
    <string name="label_status_in_process">Status Transaksi Dalam Proses</string>
    <string name="label_no_transaction">No Transaksi T272400001</string>
    <string name="label_date">07-Apr-24</string>
    <string name="label_product">AQUA 1500ML</string>
    <string name="label_small_price">Rp. 6000</string>
    <string name="label_price_product">Harga Product</string>
    <string name="label_discount">Discount</string>
    <string name="label_qty">Qty</string>
    <string name="label_total">Total</string>
    <string name="label_qty_count">1</string>
    <string name="label_discount_price">Rp. 0</string>
</resources>