<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_month_process"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/containerPlafondStart"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:strokeWidth="@dimen/dimen_2dp"
        app:strokeColor="#ececec"
        app:cardCornerRadius="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_22dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_12dp">

            <TextView
                android:id="@+id/labelPlafond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/label_start_plafond"/>

            <TextView
                android:id="@+id/textPlafond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_price"
                android:textSize="@dimen/dimen_24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelPlafond"/>

            <ImageView
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_0dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/labelPlafond"
                app:layout_constraintBottom_toBottomOf="@id/textPlafond"
                android:src="@drawable/ic_credit"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.card.MaterialCardView
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/containerPlafondStart"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:strokeWidth="@dimen/dimen_2dp"
        app:strokeColor="#ececec"
        app:cardCornerRadius="@dimen/dimen_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_usage_plafond"
                android:textColor="#F44336"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_12sp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_marginStart="@dimen/dimen_8dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerPlafondStart"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:strokeWidth="@dimen/dimen_2dp"
        app:strokeColor="#ececec"
        app:cardCornerRadius="@dimen/dimen_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_usage_plafond"
                android:textColor="#4CAF50"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_12sp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>